Bug 373883 - [Crash] Krita crashed when using gradient on a selection.
Summary: [Crash] Krita crashed when using gradient on a selection.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2016-12-19 10:17 UTC by Raghavendra kamath
Modified: 2017-06-08 07:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-12-19 10:17:55 UTC
Application: krita (3.1.88 (git 5169180))
 (Compiled from sources)
Qt Version: 5.7.1
Frameworks Version: 5.29.0
Operating System: Linux 4.8.13-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:
I had a selection on a canvas and I just clicked with the gradient tool to apply a gradient in the selected area and krita crashed.
I don't know how exactly it crashed but I hope the following back trace can be helpfull in finding what's wrong.

-- Backtrace:
Application: Krita (krita), signal: Aborted
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f0d8c785840 (LWP 1629))]

Thread 21 (Thread 0x7f0c901f9700 (LWP 3193)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 20 (Thread 0x7f0cd23e7700 (LWP 3192)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 19 (Thread 0x7f0cd2fea700 (LWP 3191)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 18 (Thread 0x7f0cd47eb700 (LWP 3190)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 17 (Thread 0x7f0c8f1f7700 (LWP 3189)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 16 (Thread 0x7f0c9dbfc700 (LWP 3188)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 15 (Thread 0x7f0c989fc700 (LWP 3187)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 14 (Thread 0x7f0c8f9f8700 (LWP 3186)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 13 (Thread 0x7f0cd4fec700 (LWP 3090)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 12 (Thread 0x7f0d567fd700 (LWP 3089)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 11 (Thread 0x7f0d577fe700 (LWP 3088)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 10 (Thread 0x7f0d5d4b2700 (LWP 3087)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 9 (Thread 0x7f0c9e3fd700 (LWP 3086)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 8 (Thread 0x7f0d57fff700 (LWP 3085)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 7 (Thread 0x7f0c8e9f6700 (LWP 3084)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 6 (Thread 0x7f0c9d3fb700 (LWP 3083)):
#0  0x00007f0d7ff444b8 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cae6 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d821781e4 in ?? () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 5 (Thread 0x7f0d2e7b6700 (LWP 1644)):
#0  0x00007f0d7ff4410f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cbab in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d8345a9a1 in ?? () from /usr/lib/libQt5Widgets.so.5
#3  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#5  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 4 (Thread 0x7f0d2efb7700 (LWP 1642)):
#0  0x00007f0d81545ffd in nanosleep () from /usr/lib/libc.so.6
#1  0x00007f0d8222126d in ?? () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d8217b078 in QThread::msleep(unsigned long) () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8acd73da in KisTileDataSwapper::run (this=0x7f0d8b1949a0 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder+64>) at /home/raghu/kf5/src/krita/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:97
#4  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#6  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 3 (Thread 0x7f0d2f7b8700 (LWP 1641)):
#0  0x00007f0d7ff4410f in pthread_cond_wait@@GLIBC_2.3.2 () from /usr/lib/libpthread.so.0
#1  0x00007f0d8217cbab in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQt5Core.so.5
#2  0x00007f0d82175aa3 in QSemaphore::acquire(int) () from /usr/lib/libQt5Core.so.5
#3  0x00007f0d8acbd6de in KisTileDataPooler::waitForWork (this=0x7f0d8b194960 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>) at /home/raghu/kf5/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:165
#4  0x00007f0d8acbde2a in KisTileDataPooler::run (this=0x7f0d8b194960 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>) at /home/raghu/kf5/src/krita/libs/image/tiles3/kis_tile_data_pooler.cc:187
#5  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#6  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#7  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 2 (Thread 0x7f0d6aeac700 (LWP 1631)):
#0  0x00007f0d8156d48d in poll () from /usr/lib/libc.so.6
#1  0x00007f0d7d54f786 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f0d7d54f89c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f0d823ab2db in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#4  0x00007f0d82354d3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#5  0x00007f0d82177063 in QThread::exec() () from /usr/lib/libQt5Core.so.5
#6  0x00007f0d85afcde5 in ?? () from /usr/lib/libQt5DBus.so.5
#7  0x00007f0d8217bcf8 in ?? () from /usr/lib/libQt5Core.so.5
#8  0x00007f0d7ff3e454 in start_thread () from /usr/lib/libpthread.so.0
#9  0x00007f0d815767df in clone () from /usr/lib/libc.so.6

Thread 1 (Thread 0x7f0d8c785840 (LWP 1629)):
[KCrash Handler]
#6  0x00007f0d814c104f in raise () from /usr/lib/libc.so.6
#7  0x00007f0d814c247a in abort () from /usr/lib/libc.so.6
#8  0x00007f0d821624f1 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#9  0x00007f0d8831888d in kis_assert_common (assertion=assertion@entry=0x7f0d8c2d1364 "!m_pickerStrokeId", file=file@entry=0x7f0d8c2d11d8 "/home/raghu/kf5/src/krita/libs/ui/tool/kis_tool_paint.cc", line=line@entry=375, throwException=throwException@entry=false, isIgnorable=isIgnorable@entry=false) at /home/raghu/kf5/src/krita/libs/global/kis_assert.cpp:90
#10 0x00007f0d88318bfa in kis_assert_recoverable (assertion=assertion@entry=0x7f0d8c2d1364 "!m_pickerStrokeId", file=file@entry=0x7f0d8c2d11d8 "/home/raghu/kf5/src/krita/libs/ui/tool/kis_tool_paint.cc", line=line@entry=375) at /home/raghu/kf5/src/krita/libs/global/kis_assert.cpp:103
#11 0x00007f0d8c04ef3c in KisToolPaint::beginAlternateAction (this=0xd862770, event=0x7fff829bc400, action=KisTool::PickFgImage) at /home/raghu/kf5/src/krita/libs/ui/tool/kis_tool_paint.cc:375
#12 0x00007f0d8be8881a in KisToolProxy::forwardToTool (this=this@entry=0xd6736a0, state=state@entry=KisToolProxy::BEGIN, action=action@entry=KisTool::AlternatePickFgImage, event=event@entry=0x7fff829bca80, docPoint=...) at /home/raghu/kf5/src/krita/libs/ui/canvas/kis_tool_proxy.cpp:193
#13 0x00007f0d8be88a83 in KisToolProxy::forwardEvent (this=0xd6736a0, state=state@entry=KisToolProxy::BEGIN, action=action@entry=KisTool::AlternatePickFgImage, event=event@entry=0x7fff829bc530, originalEvent=originalEvent@entry=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/canvas/kis_tool_proxy.cpp:143
#14 0x00007f0d8c0e5fe8 in KisAlternateInvocationAction::begin (this=this@entry=0xa1e9130, shortcut=4, event=event@entry=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/input/kis_alternate_invocation_action.cpp:114
#15 0x00007f0d8c0ed452 in KisShortcutMatcher::tryRunReadyShortcut (this=this@entry=0xa1b05a0, button=<optimized out>, event=event@entry=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/input/kis_shortcut_matcher.cpp:432
#16 0x00007f0d8c0ee5d7 in KisShortcutMatcher::buttonPressed (this=this@entry=0xa1b05a0, button=<optimized out>, event=event@entry=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/input/kis_shortcut_matcher.cpp:191
#17 0x00007f0d8c0dd41a in KisInputManager::eventFilterImpl (this=0xa16f108, event=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/input/kis_input_manager.cpp:463
#18 0x00007f0d82356641 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#19 0x00007f0d83235335 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#20 0x00007f0d8323d531 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#21 0x00007f0d8c140587 in KisApplication::notify (this=<optimized out>, receiver=0xa1e6580, event=0x7fff829bca80) at /home/raghu/kf5/src/krita/libs/ui/KisApplication.cpp:532
#22 0x00007f0d823568e0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#23 0x00007f0d8c1f2726 in QCoreApplication::sendEvent (event=0x7fff829bca80, receiver=0xa1e6580) at /usr/include/qt/QtCore/qcoreapplication.h:231
#24 processTabletEvent (e=0x2a6d9640) at /home/raghu/kf5/src/krita/libs/ui/input/wintab/qxcbconnection.cpp:670
#25 0x00007f0d8c1ec50e in QXcbConnection::xi2ReportTabletEvent (this=this@entry=0x24b7320, tabletData=..., event=event@entry=0x25b31800) at /home/raghu/kf5/src/krita/libs/ui/input/wintab/qxcbconnection_xi2.cpp:960
#26 0x00007f0d8c1ec87c in QXcbConnection::xi2HandleTabletEvent (this=this@entry=0x24b7320, event=event@entry=0x25b31800, tabletData=0x24b71a8, window=window@entry=0xb5e4b60) at /home/raghu/kf5/src/krita/libs/ui/input/wintab/qxcbconnection_xi2.cpp:794
#27 0x00007f0d8c1f03fe in QXcbConnection::xi2HandleEvent (this=0x24b7320, event=0x25b31800) at /home/raghu/kf5/src/krita/libs/ui/input/wintab/qxcbconnection_xi2.cpp:512
#28 0x00007f0d8c1f3c06 in KisXi2EventFilter::nativeEventFilter (this=0x7f0d8c64d7f0 <_ZZN12_GLOBAL__N_116Q_QGS_s_instance13innerFunctionEvE6holder>, eventType=..., message=0x7f0d70016800, result=<optimized out>) at /home/raghu/kf5/src/krita/libs/ui/input/wintab/kis_xi2_event_filter.cpp:115
#29 0x00007f0d82353e7f in QAbstractEventDispatcher::filterNativeEvent(QByteArray const&, void*, long*) () from /usr/lib/libQt5Core.so.5
#30 0x00007f0d797e9f54 in QXcbConnection::handleXcbEvent(xcb_generic_event_t*) () from /usr/lib/libQt5XcbQpa.so.5
#31 0x00007f0d797eac35 in QXcbConnection::processXcbEvents() () from /usr/lib/libQt5XcbQpa.so.5
#32 0x00007f0d82382f29 in QObject::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#33 0x00007f0d8323535c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#34 0x00007f0d8323cad1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#35 0x00007f0d8c140587 in KisApplication::notify (this=<optimized out>, receiver=0x1ee94e0, event=0x7f0d70004840) at /home/raghu/kf5/src/krita/libs/ui/KisApplication.cpp:532
#36 0x00007f0d823568e0 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#37 0x00007f0d8235906d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQt5Core.so.5
#38 0x00007f0d823aaeb3 in ?? () from /usr/lib/libQt5Core.so.5
#39 0x00007f0d7d54f587 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#40 0x00007f0d7d54f7f0 in ?? () from /usr/lib/libglib-2.0.so.0
#41 0x00007f0d7d54f89c in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#42 0x00007f0d823ab2bf in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#43 0x00007f0d82354d3a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#44 0x00007f0d8235d23c in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#45 0x0000000000404f54 in main (argc=<optimized out>, argv=<optimized out>) at /home/raghu/kf5/src/krita/krita/main.cc:258

Possible duplicates by query: bug 366243, bug 365992, bug 365985, bug 363958.

Reported using DrKonqi
Comment 1 Halla Rempt 2016-12-22 09:33:59 UTC
Hm... Where it crashes is in the color picker mode of the paint tool. This might be one for Dmitry, because I am lost here.
Comment 2 Halla Rempt 2016-12-22 09:35:30 UTC
Asserts exist to be confirmed...
Comment 3 Dmitry Kazakov 2017-01-12 11:03:24 UTC
Git commit ebfaab84a240efe7b9ba42e65ecdd346e0737007 by Dmitry Kazakov.
Committed on 12/01/2017 at 11:03.
Pushed by dkazakov into branch 'krita/3.1'.

Temporary workaround for color picker bug in the gradient tool

The proper fix would be to stop the action in KisShortcutMatcher
when the tool switches. It would really fix the bug.
Ref T4962

M  +11   -1    libs/ui/tool/kis_tool_paint.cc

https://commits.kde.org/krita/ebfaab84a240efe7b9ba42e65ecdd346e0737007
Comment 4 Halla Rempt 2017-01-25 10:02:31 UTC
I had to revert that commit; it broke shift-drag brush resizing.
Comment 5 Dmitry Kazakov 2017-03-27 10:57:01 UTC
Git commit ca1e6b45afd8d648deeec94257d0311d921ea0c0 by Dmitry Kazakov.
Committed on 27/03/2017 at 10:56.
Pushed by dkazakov into branch 'kazakov/svg-loading'.

Fix a crash after switching tools while running color picking

The input manager should finish the action before the tool is
switched, otherwise the tool may be left with dangling KoStrokeId
pointers and crash after the next execution.
Fixes T4962

M  +2    -0    libs/flake/KoToolManager.cpp
M  +6    -0    libs/flake/KoToolManager.h
M  +10   -0    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager.h

https://commits.kde.org/krita/ca1e6b45afd8d648deeec94257d0311d921ea0c0
Comment 6 Dmitry Kazakov 2017-03-29 11:03:15 UTC
Git commit daa136675d54877780bd136225e77e611347c223 by Dmitry Kazakov.
Committed on 29/03/2017 at 10:03.
Pushed by dkazakov into branch 'krita/3.1'.

Fix a crash after switching tools while running color picking

The input manager should finish the action before the tool is
switched, otherwise the tool may be left with dangling KoStrokeId
pointers and crash after the next execution.
Fixes T4962

M  +2    -0    libs/flake/KoToolManager.cpp
M  +6    -0    libs/flake/KoToolManager.h
M  +10   -0    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager.h

https://commits.kde.org/krita/daa136675d54877780bd136225e77e611347c223
Comment 7 Halla Rempt 2017-06-08 07:53:14 UTC
Git commit 3e53dbf915a6799160090be3cc5594d29473514a by Boudewijn Rempt.
Committed on 08/06/2017 at 07:49.
Pushed by rempt into branch 'krita/3.2'.

Revert "Fix a crash after switching tools while running color picking"

This reverts commit daa136675d54877780bd136225e77e611347c223.
Related: bug 380955

This commit caused an infinite loop when creating a new shape by
clicking in the add-shape docker and then dragging an outline.

CCMAIL:dimula73@gmail.com
Date:   Mon Mar 27 13:56:39 2017 +0300

    Fix a crash after switching tools while running color picking

    The input manager should finish the action before the tool is
    switched, otherwise the tool may be left with dangling KoStrokeId
    pointers and crash after the next execution.
    Fixes T4962

I'm not sure how to fix both issues; reverting for now.

M  +0    -1    libs/flake/KoToolManager.cpp
M  +0    -6    libs/flake/KoToolManager.h
M  +0    -10   libs/ui/input/kis_input_manager.cpp
M  +0    -1    libs/ui/input/kis_input_manager.h

https://commits.kde.org/krita/3e53dbf915a6799160090be3cc5594d29473514a
Comment 8 Halla Rempt 2017-06-08 07:53:14 UTC
Git commit 3e53dbf915a6799160090be3cc5594d29473514a by Boudewijn Rempt.
Committed on 08/06/2017 at 07:49.
Pushed by rempt into branch 'krita/3.2'.

Revert "Fix a crash after switching tools while running color picking"

This reverts commit daa136675d54877780bd136225e77e611347c223.
Related: bug 380955

This commit caused an infinite loop when creating a new shape by
clicking in the add-shape docker and then dragging an outline.

CCMAIL:dimula73@gmail.com
Date:   Mon Mar 27 13:56:39 2017 +0300

    Fix a crash after switching tools while running color picking

    The input manager should finish the action before the tool is
    switched, otherwise the tool may be left with dangling KoStrokeId
    pointers and crash after the next execution.
    Fixes T4962

I'm not sure how to fix both issues; reverting for now.

M  +0    -1    libs/flake/KoToolManager.cpp
M  +0    -6    libs/flake/KoToolManager.h
M  +0    -10   libs/ui/input/kis_input_manager.cpp
M  +0    -1    libs/ui/input/kis_input_manager.h

https://commits.kde.org/krita/3e53dbf915a6799160090be3cc5594d29473514a