Fix a crash after switching tools while running color picking

The input manager should finish the action before the tool is
switched, otherwise the tool may be left with dangling KoStrokeId
pointers and crash after the next execution.

BUG:373883
Fixes T4962