libs/flake/KoToolManager.cpp
@@ -605,6 +605,8 @@ void KoToolManager::Private::disconnectActiveTool()
         canvasData->deactivateToolActions();
         // repaint the decorations before we deactivate the tool as it might deleted
         // data needed for the repaint
+        emit q->aboutToChangeTool(canvasData->canvas);
+        canvasData->canvas->notifyToolGoingToSwitch();
         canvasData->activeTool->deactivate();
         disconnect(canvasData->activeTool, SIGNAL(cursorChanged(const QCursor&)),
                    q, SLOT(updateCursor(const QCursor&)));
