libs/ui/input/kis_input_manager.h
@@ -111,6 +111,7 @@ public Q_SLOTS:
     void slotFocusOnEnter(bool value);
 
 private Q_SLOTS:
+    void slotAboutToChangeTool();
     void slotToolChanged();
     void profileChanged();
     void slotCompressedMoveEvent();
